// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Generic/Navbar Logged In 1`] = `
<header
  className="sticky top-0 z-50 flex w-full flex-col justify-center border-b-4 border-primary bg-white px-4 lg:flex-row"
>
  <section
    className="mx-auto w-full max-w-[1218px] flex h-[70px] items-center justify-between"
  >
    <div
      className="hidden items-center gap-8 lg:flex"
    >
      <div
        className="absolute top-4 left-[50%] translate-x-[-50%]"
      >
        <div
          className="block lg:hidden relative w-fit"
          data-headlessui-state=""
        >
          <button
            aria-expanded={false}
            className="flex items-center justify-between p-2"
            data-headlessui-state=""
            id="headlessui-popover-button-:r4t:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <span
              className="mr-2 whitespace-nowrap text-sm uppercase text-neutral-900"
            >
              English
            </span>
          </button>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:underline lg:mr-2 tour-help"
        >
          <a
            href="https://terramatchsupport.zendesk.com/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-neutral-900 lg:text-body-300 text-heading-400"
                data-testid="txt"
              >
                Help Center
              </span>
            </div>
          </a>
        </div>
      </div>
      <div
        className="hidden h-4 w-[1px] bg-neutral-500 lg:mx-2 lg:block"
      />
      <div
        className="font-regular uppercase xl:w-full hover:underline"
      >
        <a
          href="/"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex items-center"
          >
            <span
              className="whitespace-nowrap text-neutral-900 lg:text-body-300 text-heading-400"
              data-testid="txt"
            >
              Logout
            </span>
          </div>
        </a>
      </div>
      <div
        className="hidden lg:block relative w-fit"
        data-headlessui-state=""
      >
        <button
          aria-expanded={false}
          className="flex items-center justify-between p-2"
          data-headlessui-state=""
          id="headlessui-popover-button-:r52:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          <span
            className="mr-2 whitespace-nowrap text-sm uppercase text-neutral-900"
          >
            English
          </span>
        </button>
      </div>
    </div>
    <button
      className="flex items-center justify-center rounded-full hover:bg-opacity-60 tour-menu-button block lg:hidden"
      disabled={false}
      onClick={[Function]}
    />
  </section>
</header>
`;

exports[`Storyshots Components/Generic/Navbar Logged Out 1`] = `
<header
  className="sticky top-0 z-50 flex w-full flex-col justify-center border-b-4 border-primary bg-white px-4 lg:flex-row"
>
  <section
    className="mx-auto w-full max-w-[1218px] flex h-[70px] items-center justify-between"
  >
    <div
      className="hidden items-center gap-8 lg:flex"
    >
      <div
        className="absolute top-4 left-[50%] translate-x-[-50%]"
      >
        <div
          className="block lg:hidden relative w-fit"
          data-headlessui-state=""
        >
          <button
            aria-expanded={false}
            className="flex items-center justify-between p-2"
            data-headlessui-state=""
            id="headlessui-popover-button-:r57:"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            type="button"
          >
            <span
              className="mr-2 whitespace-nowrap text-sm uppercase text-neutral-900"
            >
              English
            </span>
          </button>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:underline lg:mr-2"
        >
          <a
            href="/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-neutral-900 lg:text-body-300 text-heading-400"
                data-testid="txt"
              >
                Home
              </span>
            </div>
          </a>
        </div>
      </div>
      <div>
        <div
          className="font-regular uppercase xl:w-full hover:underline lg:mr-2"
        >
          <a
            href="https://terramatchsupport.zendesk.com/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="flex items-center"
            >
              <span
                className="whitespace-nowrap text-neutral-900 lg:text-body-300 text-heading-400"
                data-testid="txt"
              >
                Support
              </span>
            </div>
          </a>
        </div>
      </div>
      <div
        className="hidden h-4 w-[1px] bg-neutral-500 lg:mx-2 lg:block"
      />
      <div
        className="font-regular uppercase xl:w-full hover:underline"
      >
        <a
          href="/auth/login"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex items-center"
          >
            <span
              className="whitespace-nowrap text-neutral-900 lg:text-body-300 text-heading-400"
              data-testid="txt"
            >
              Sign in
            </span>
          </div>
        </a>
      </div>
      <div
        className="hidden lg:block relative w-fit"
        data-headlessui-state=""
      >
        <button
          aria-expanded={false}
          className="flex items-center justify-between p-2"
          data-headlessui-state=""
          id="headlessui-popover-button-:r5c:"
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          <span
            className="mr-2 whitespace-nowrap text-sm uppercase text-neutral-900"
          >
            English
          </span>
        </button>
      </div>
    </div>
    <button
      className="flex items-center justify-center rounded-full hover:bg-opacity-60 tour-menu-button block lg:hidden"
      disabled={false}
      onClick={[Function]}
    />
  </section>
</header>
`;
